--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,66 +4,74 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title><%= data.title %></title>
-	<!-- brandnyette info -->
-	<%- include("../assets/ejs/brandyentte.ejs") %>
+
+	<% const { data }=locals; %>
+		<title><%= data.name %></title>
+		<!-- brandnyette info -->
+		<%- include("../assets/ejs/brandyentte.ejs") %>
 </head>
 
 <body>
+
 	<!-- header-->
 	<%- include("../assets/ejs/header.ejs") %>
 	<!-- Navbar -->
-	<!-- Navbar -->
-<!-- Navbar -->
-<div class="navbar">
-    <div class="pt-30 categories-list">
-        <div class="row">
-            <div class="col col-12">
-                <div class="card-columns">
-                    <% (Array.isArray(data) ? data : [data]).forEach(folder => { %>
-                    <div class="card-primary col-12 col-sm-3 col-lg-3 mr-auto p-2">
-                        <div class="card-header" id="<%= folder.id %>">
-                            <i class="fa-solid fa-film"></i>
-                            <a title="<%= folder.name %>" href="/<%= folder.id %>">
-                                <h1 class="card-title"><%= folder.name %>
-                                    <div class="pull-right">
-                                        <i class="fa fa-external-link"></i>
-                                    </div>
-                                </h1>
-                            </a>
-                            <% (folder.subfolders || []).forEach(function(subfolder) { %>
-                            <div class="card-block">
-                                <ol>
-                                    <!--Ranking list -->
-                                    <li>
-                                        <!--listed item -->
-                                        <div class="icon">
-                                            <img class="favicon" alt="" src="<%= subfolder.iconSrc %>" width="15px"
-                                                height="15px" />
-                                            <a class="link" href="/<%= folder.id %>/<%= subfolder.id %>"><%= subfolder.name %></a>
-                                            <a title="<%= subfolder.name %>" rel="noopener nofollow" target="_new"
-                                                href="/<%= folder.id %>/<%= subfolder.id %>">
-                                                <i class="fa fa-external-link"></i>
-                                            </a>
-                                        </div>
-                                    </li>
-                                    <!--listed item END-->
-                                </ol>
-                                <!--Ranking list END-->
-                            </div>
-                            <% }) %>
-                        </div>
-                    </div>
-                    <% }) %>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-			<!-- Brandynette footer-->
-			<%- //include("../assets/ejs/ads.ejs") %>
+	<div class="navbar">
+		<div class="pt-30 categories-list">
+			<div class="row">
+				<div class="col col-12">
+					<div class="card-columns">
+						<% folders.forEach(folder => { %>
+							<div class="card-primary col-12 col-sm-3 col-lg-3 mr-auto p-2">
+								<div class="card-header" id="<%= folder.path %>">
+									<i class="fa-solid fa-film"></i>
+									<a title="<%= folder.name %>" href="<%= folder.path %>">
+										<h1 class="card-title"><%= folder.name %>
+											<div class="pull-right">
+												<i class="fa fa-external-link"></i>
+											</div>
+										</h1>
+									</a>
+									<div class="card-block">
+										<ol>
+											<!--Ranking list -->
+											<li>
+												<!--listed item -->
+												<div class="icon">
+													<img class="favicon" alt="" src="" width="15px"
+														height="15px" />
+													<a class="link" href="<%= folder.path %>"></a>
+													<a title="<%= folder.name %>" rel="noopener nofollow" target="_new"
+														href="<%= folder.path %>">
+														<i class="fa fa-external-link"></i>
+													</a>
+												</div>
+											</li>
+											<!--listed item END-->
+										</ol>
+										<!--Ranking list END-->
+									</div>
+								</div>
+							</div>
+						<% }) %>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+		<!-- Your code here -->
+		<div class="col col-3">
+			<video controls width="1080p" preload="metadata">
+				<% if (folder && folder.url) { %>
+					<source src="<%= folder.url %>" type="video/mp4" />
+					<% } %>
+			</video>
+		</div>
+		</div>
+		<!-- Brandynette footer-->
+		<%- //include("../assets/ejs/ads.ejs") %>
 			<%- include("../assets/ejs/footer.ejs") %>
+
 </body>
 
 </html>
