--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<% const { data }=locals; %>
-		<title><%= data.name %></title>
+		<title>
+			<%= data.name %>
+		</title>
 		<!-- brandnyette info -->
 		<%- include("../assets/ejs/brandyentte.ejs") %>
 </head>
@@ -15,65 +17,74 @@
 
 	<!-- header-->
 	<%- include("../assets/ejs/header.ejs") %>
-	<!-- Navbar -->
-	<div class="navbar">
-		<div class="pt-30 categories-list">
-			<div class="row">
-				<div class="col col-12">
-					<div class="card-columns">
-						<% folders.forEach(folder => { %>
-							<div class="card-primary col-12 col-sm-3 col-lg-3 mr-auto p-2">
-								<div class="card-header" id="<%= folder.path %>">
-									<i class="fa-solid fa-film"></i>
-									<a title="<%= folder.name %>" href="<%= folder.path %>">
-										<h1 class="card-title"><%= folder.name %>
-											<div class="pull-right">
-												<i class="fa fa-external-link"></i>
-											</div>
-										</h1>
-									</a>
-									<div class="card-block">
-										<ol>
-											<!--Ranking list -->
-											<li>
-												<!--listed item -->
-												<div class="icon">
-													<img class="favicon" alt="" src="" width="15px"
-														height="15px" />
-													<a class="link" href="<%= folder.path %>"></a>
-													<a title="<%= folder.name %>" rel="noopener nofollow" target="_new"
-														href="<%= folder.path %>">
+		<!-- Navbar -->
+	<div class="grid-container">
+		<div class="flex-container">
+			<div style="display: flex;">
+				<div class="navbar" style="width: 25%;">
+				<div class="pt-30 categories-list">
+					<div class="row">
+						<div class="col col-12">
+							<div class="card-columns">
+
+								<div class="card-primary col-12 col-sm-4 col-lg-4 mr-auto p-2">
+									<div class="card-header" id="<%= folder.path %>">
+										<i class="fa-solid fa-film"></i>
+										<a title="<%= folder.name %>" href="<%= folder.path %>">
+											<h1 class="card-title">
+												<%= folder.name %>
+													<div class="pull-right">
 														<i class="fa fa-external-link"></i>
-													</a>
-												</div>
-											</li>
-											<!--listed item END-->
-										</ol>
-										<!--Ranking list END-->
+													</div>
+											</h1>
+										</a>
+										<div class="card-block">
+											<ol>
+												<% folders.forEach(folder=> { %>
+													<!--Ranking list -->
+													<li>
+
+														<!--listed item -->
+														<div class="icon">
+															<img class="favicon" alt="" src="" width="15px"
+																height="15px" />
+															<a class="link" href="<%= folder.path %>">
+																<%= folder.name %>
+															</a>
+															<a title="<%= folder.name %>" rel="noopener nofollow"
+																target="_new" href="<%= folder.path %>">
+																<i class="fa fa-external-link"></i>
+															</a>
+														</div>
+
+													</li>
+													<!--listed item END-->
+													<% }) %>
+											</ol>
+											<!--Ranking list END-->
+										</div>
 									</div>
 								</div>
+
 							</div>
-						<% }) %>
+						</div>
 					</div>
+				</div>
+			</div>
+			<div class="video-container" style="width: 75%; justify-content: flex-end;">
+					<video controls width="1080p" preload="metadata">
+						<% if (folder && folder.url) { %>
+							<source src="<%= folder.url %>" type="video/mp4" />
+							<% } %>
+					</video>
 				</div>
 			</div>
 		</div>
 	</div>
-		<!-- Your code here -->
-		<div class="col col-3">
-			<video controls width="1080p" preload="metadata">
-				<% if (folder && folder.url) { %>
-					<source src="<%= folder.url %>" type="video/mp4" />
-					<% } %>
-			</video>
-		</div>
-		</div>
-		<!-- Brandynette footer-->
-		<%- //include("../assets/ejs/ads.ejs") %>
+			<!-- Brandynette footer-->
+			<%- //include("../assets/ejs/ads.ejs") %>
 			<%- include("../assets/ejs/footer.ejs") %>
-
-</body>
-
+	</body>
 </html>
 <style>
 	@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@800&display=swap");
@@ -273,8 +284,6 @@
 		font-family: "Protest Riot", sans-serif;
 		font-weight: 400;
 		font-style: normal;
-		/*margin: 1%;
-		padding: 1%;*/
 	}
 
 	#banner {
@@ -297,7 +306,11 @@
 
 	.grid-container {
 		display: grid;
-		grid-template-columns: auto auto auto;
+		grid-template-columns: 1fr 1fr;
+		gap: 20px;
+	}
+	.flex-container {
+		display: flex;
 	}
 
 	.container {
@@ -305,10 +318,7 @@
 	}
 
 	.navbar {
-		width: 15%;
+		width: 30%;
 	}
 
-	.content {
-		width: 85%;
-	}
 </style>
